Update api.yml
