# api.yml
@@ -7,31 +7,6 @@ info:
 servers:
   - url: 'http://localhost'
 paths:
-  /hello:
-    get:
-      summary: >-
-        This is just a test endpoint to get you started. Please delete this
-        endpoint.
-      operationId: hello
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Test return
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/HelloResponse'
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
   /register:
     post:
       summary: Register a new user.
@@ -113,13 +88,6 @@ paths:
           description: Conflict
 components:
   schemas:
-    HelloResponse:
-      type: object
-      required:
-        - message
-      properties:
-        message:
-          type: string
     RegisterRequest:
       type: object
       required:
